updated models_v3.ipynb to better aggregate best metric scores for selecting model.

--- a/notebooks/titanic_models_v3.ipynb
+++ b/notebooks/titanic_models_v3.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,19 +119,14 @@
     "                    'f1': f1,\n",
     "                    'roc_auc': roc_auc,\n",
     "                    'cv_score': cv_scores.mean(),\n",
+    "                    'cv_pred': cv_pred\n",
     "                    }\n",
-    "    \n",
-    "    #Print metrics\n",
-    "    print(name)\n",
-    "    print('Accuracy: ', accuracy)\n",
-    "    print('Precision: ', precision)\n",
-    "    print('Recall: ', recall)\n",
-    "    print"
+    "    \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,48 +153,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 69,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "RandomForestClassifier\n",
-      "Accuracy:  0.9797979797979798\n",
-      "Precision:  0.990909090909091\n",
-      "Recall:  0.956140350877193\n",
-      "LogisticRegression\n",
-      "Accuracy:  0.8058361391694725\n",
-      "Precision:  0.7717041800643086\n",
-      "Recall:  0.7017543859649122\n",
-      "GradientBoostingClassifier\n",
-      "Accuracy:  0.8911335578002245\n",
-      "Precision:  0.9016393442622951\n",
-      "Recall:  0.804093567251462\n",
-      "SVC\n",
-      "Accuracy:  0.8372615039281706\n",
-      "Precision:  0.8272425249169435\n",
-      "Recall:  0.7280701754385965\n",
-      "SGDClassifier\n",
-      "Accuracy:  0.6464646464646465\n",
-      "Precision:  0.5279503105590062\n",
-      "Recall:  0.7456140350877193\n",
-      "KNeighborsClassifier\n",
-      "Accuracy:  0.8574635241301908\n",
-      "Precision:  0.8369905956112853\n",
-      "Recall:  0.7807017543859649\n",
-      "DecisionTreeClassifier\n",
-      "Accuracy:  0.9797979797979798\n",
-      "Precision:  0.9939024390243902\n",
-      "Recall:  0.9532163742690059\n",
-      "XGBClassifier\n",
-      "Accuracy:  0.9640852974186308\n",
-      "Precision:  0.9696969696969697\n",
-      "Recall:  0.935672514619883\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#iterate through list of models, evaluate, and add to dictionary\n",
     "for model in model_list:\n",
@@ -208,79 +164,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Best Model:  RandomForestClassifier\n"
+      "Best accuracy: RandomForestClassifier\n",
+      "Best precision: DecisionTreeClassifier\n",
+      "Best recall: RandomForestClassifier\n",
+      "Best f1: RandomForestClassifier\n",
+      "Best roc_auc: RandomForestClassifier\n",
+      "Best cv_score: GradientBoostingClassifier\n"
      ]
     }
    ],
    "source": [
-    "#Print model with best roc_auc score\n",
-    "best_roc_auc = 0\n",
-    "for model in models:\n",
-    "    if models[model]['roc_auc'] > best_roc_auc:\n",
-    "        best_roc_auc = models[model]['roc_auc']\n",
-    "        best_model = model\n",
-    "        \n",
-    "print('Best Model: ', best_model)"
+    "#For each metric, select the best model\n",
+    "for metric in ['accuracy', 'precision', 'recall', 'f1', 'roc_auc', 'cv_score']:\n",
+    "    best_score = 0\n",
+    "    for model in models:\n",
+    "        if models[model][metric] > best_score:\n",
+    "            best_score = models[model][metric]\n",
+    "            best_model = model\n",
+    "    print('Best {}: {}'.format(metric, best_model))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Best Model:  GradientBoostingClassifier\n"
-     ]
-    }
-   ],
-   "source": [
-    "#Print model with best cv score\n",
-    "best_cv_score = 0\n",
-    "for model in models:\n",
-    "    if models[model]['cv_score'] > best_cv_score:\n",
-    "        best_cv_score = models[model]['cv_score']\n",
-    "        best_model = model\n",
-    "\n",
-    "print('Best Model: ', best_model)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Best Model:  RandomForestClassifier\n"
-     ]
-    }
-   ],
-   "source": [
-    "#Print model with best f1 score\n",
-    "best_f1 = 0\n",
-    "for model in models:\n",
-    "    if models[model]['f1'] > best_f1:\n",
-    "        best_f1 = models[model]['f1']\n",
-    "        best_model = model\n",
-    "\n",
-    "print('Best Model: ', best_model)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -290,7 +203,7 @@
        "       [ 15, 327]])"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -303,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -316,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -342,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -350,7 +263,7 @@
      "output_type": "stream",
      "text": [
       "RandomForestClassifier\n",
-      "cv_score:  0.8104119850187266\n",
+      "cv_score:  0.8160049937578027\n",
       "LogisticRegression\n",
       "cv_score:  0.8002372034956304\n",
       "GradientBoostingClassifier\n",
@@ -358,11 +271,11 @@
       "SVC\n",
       "cv_score:  0.8226966292134831\n",
       "SGDClassifier\n",
-      "cv_score:  0.7498002496878902\n",
+      "cv_score:  0.7429588014981274\n",
       "KNeighborsClassifier\n",
       "cv_score:  0.8069912609238452\n",
       "DecisionTreeClassifier\n",
-      "cv_score:  0.7901622971285893\n",
+      "cv_score:  0.7923845193508114\n",
       "XGBClassifier\n",
       "cv_score:  0.8125967540574284\n"
      ]
@@ -378,11 +291,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# #Optimize RandomForestClassifier\n",
+    "#Optimize RandomForestClassifier\n",
     "# start = time.time()\n",
     "# param_grid = [{'n_estimators': [3, 10, 30, 100, 300, 1000],\n",
     "#                 'max_features': [2, 4, 6, 8, 10],\n",
@@ -392,7 +305,12 @@
     "\n",
     "# rf_clf = RandomForestClassifier()\n",
     "\n",
-    "# grid_search = GridSearchCV(rf_clf, param_grid, cv=10, scoring='roc_auc', n_jobs=cpu_count())\n",
+    "# scoring = ['roc_auc', 'accuracy', 'precision', 'recall', 'f1']\n",
+    "\n",
+    "# grid_search = GridSearchCV(rf_clf, param_grid, cv=10, \n",
+    "#                            scoring=scoring,\n",
+    "#                            refit='roc_auc', \n",
+    "#                            n_jobs=cpu_count())\n",
     "\n",
     "# grid_search.fit(X_train, y_train)\n",
     "\n",
@@ -407,112 +325,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
-    "best_params = best_params"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# #create a RandomForestClassifier with best params\n",
-    "# start = time.time()\n",
-    "# rf_clf = RandomForestClassifier(**best_params)\n",
-    "\n",
-    "# #fit the model\n",
-    "# rf_clf.fit(X_train, y_train)\n",
-    "\n",
-    "# #evaluate the model\n",
-    "# y_pred = rf_clf.predict(X_train)\n",
-    "\n",
-    "# rf_clf_classification_report = classification_report(y_train, y_pred)\n",
-    "# rf_clf_confusion_matrix = confusion_matrix(y_train, y_pred)\n",
-    "\n",
-    "# stop = time.time()\n",
-    "# total_time = stop - start\n",
-    "\n",
-    "# print(rf_clf_classification_report)\n",
-    "# print(rf_clf_confusion_matrix)\n",
-    "# print(total_time)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Optimize RandomForestClassifier\n",
-    "# start = time.time()\n",
-    "# param_grid = [{'n_estimators': [5, 10, 20, 50, 100, 500, 1000, 5000],\n",
-    "#                 'max_features': [2, 4, 6, 8, 10],\n",
-    "#                 'max_depth': [2, 4, 6, 8, 10],\n",
-    "#                 'max_leaf_nodes': [2, 4, 6, 8, 10, 20, 50],\n",
-    "#                 'n_jobs': [-1]}]\n",
-    "\n",
-    "# rf_clf = RandomForestClassifier()\n",
-    "\n",
-    "# grid_search = GridSearchCV(rf_clf, param_grid, cv=10, scoring='roc_auc', n_jobs=cpu_count())\n",
-    "\n",
-    "# grid_search.fit(X_train, y_train)\n",
-    "\n",
-    "# best_params = grid_search.best_params_\n",
+    "# best_params = best_params\n",
     "# print(best_params)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
-    "best_params = best_params"
+    "# #Fit model with best params\n",
+    "# rf_clf = RandomForestClassifier(**best_params)\n",
+    "\n",
+    "# #Fit the model\n",
+    "# rf_clf.fit(X_train, y_train)\n",
+    "\n",
+    "# #Make predictions\n",
+    "# y_pred = rf_clf.predict(X_train)\n",
+    "\n",
+    "# #Evalutate model\n",
+    "# accuracy = accuracy_score(y_train, y_pred)\n",
+    "# precision = precision_score(y_train, y_pred)\n",
+    "# recall = recall_score(y_train, y_pred)\n",
+    "# f1 = f1_score(y_train, y_pred)\n",
+    "# roc_auc = roc_auc_score(y_train, y_pred)\n",
+    "\n",
+    "# #Create dict of metrics\n",
+    "# metrics = {'accuracy': accuracy,\n",
+    "#             'precision': precision,\n",
+    "#             'recall': recall,\n",
+    "#             'f1': f1,\n",
+    "#             'roc_auc': roc_auc}\n",
+    "\n",
+    "# print(metrics)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'best_params' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[18], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39m#create a model with best params\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m rf_clf \u001b[39m=\u001b[39m RandomForestClassifier(\u001b[39m*\u001b[39m\u001b[39m*\u001b[39mbest_params)\n\u001b[1;32m      4\u001b[0m \u001b[39m#fit the model\u001b[39;00m\n\u001b[1;32m      5\u001b[0m rf_clf\u001b[39m.\u001b[39mfit(X_train, y_train)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'best_params' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "#create a model with best params\n",
-    "rf_clf = RandomForestClassifier(**best_params)\n",
-    "\n",
-    "#fit the model\n",
-    "rf_clf.fit(X_train, y_train)\n",
-    "\n",
-    "#evaluate the model\n",
-    "y_pred = rf_clf.predict(X_train)\n",
-    "\n",
-    "rf_clf_classification_report = classification_report(y_train, y_pred)\n",
-    "rf_clf_confusion_matrix = confusion_matrix(y_train, y_pred)\n",
-    "print(rf_clf_classification_report)\n",
-    "print(rf_clf_confusion_matrix)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
