added readme.md. Made predictions on test set with both model notebooks. Submitted predictions to Kaggle, models_v2 had highest score at .76.

--- a/notebooks/titanic_preprocess_v2.ipynb
+++ b/notebooks/titanic_preprocess_v2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,19 +23,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
     "train = pd.read_csv('../data/train.csv')\n",
     "test = pd.read_csv('../data/test.csv')\n",
     "y_train = train['Survived']\n",
-    "train.drop(['Survived', 'Cabin', 'Ticket', 'Name'], axis=1, inplace=True)"
+    "\n",
+    "train.drop(['Survived', 'Cabin', 'Ticket', 'Name'], axis=1, inplace=True)\n",
+    "test.drop(['Cabin', 'Ticket', 'Name'], axis=1, inplace=True)\n",
+    "\n",
+    "train.set_index('PassengerId', inplace=True)\n",
+    "test.set_index('PassengerId', inplace=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -95,7 +100,7 @@
        "[40.0, 30.0, 25.0, 35.0, 28.0, 21.5]"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -109,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -134,20 +139,19 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "Index: 891 entries, 0 to 890\n",
-      "Data columns (total 8 columns):\n",
-      " #   Column       Non-Null Count  Dtype  \n",
-      "---  ------       --------------  -----  \n",
-      " 0   PassengerId  891 non-null    int64  \n",
-      " 1   Pclass       891 non-null    int64  \n",
-      " 2   Sex          891 non-null    object \n",
-      " 3   Age          891 non-null    float64\n",
-      " 4   SibSp        891 non-null    int64  \n",
-      " 5   Parch        891 non-null    int64  \n",
-      " 6   Fare         891 non-null    float64\n",
-      " 7   Embarked     889 non-null    object \n",
-      "dtypes: float64(2), int64(4), object(2)\n",
-      "memory usage: 62.6+ KB\n"
+      "Index: 891 entries, 1 to 891\n",
+      "Data columns (total 7 columns):\n",
+      " #   Column    Non-Null Count  Dtype  \n",
+      "---  ------    --------------  -----  \n",
+      " 0   Pclass    891 non-null    int64  \n",
+      " 1   Sex       891 non-null    object \n",
+      " 2   Age       891 non-null    float64\n",
+      " 3   SibSp     891 non-null    int64  \n",
+      " 4   Parch     891 non-null    int64  \n",
+      " 5   Fare      891 non-null    float64\n",
+      " 6   Embarked  889 non-null    object \n",
+      "dtypes: float64(2), int64(3), object(2)\n",
+      "memory usage: 55.7+ KB\n"
      ]
     }
    ],
@@ -157,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -212,7 +216,7 @@
        "         0.        ,  1.        ]])"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -234,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,6 +247,31 @@
     "pd.to_pickle(X_train, '../data/X_train_v2.pkl')\n",
     "pd.to_pickle(y_train, '../data/y_train_v2.pkl')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_test = preprocess_pipeline.transform(test[num_attribs + cat_attribs])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pd.to_pickle(X_test, '../data/X_test_v2.pkl')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
