--- a/notebooks/titanic_preprocess_v3.ipynb
+++ b/notebooks/titanic_preprocess_v3.ipynb
@@ -37,10 +37,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_data = pd.read_csv('data/train.csv')\n",
-    "test_data = pd.read_csv('data/test.csv')\n",
+    "train_data = pd.read_csv('../data/train.csv')\n",
+    "test_data = pd.read_csv('../data/test.csv')\n",
     "y_train = train_data['Survived']\n",
-    "train_data.drop(['Survived', 'Cabin', 'Ticket', 'Name'], axis=1, inplace=True)"
+    "train_data.drop(['Survived', 'Cabin', 'Ticket', 'Name'], axis=1, inplace=True)\n",
+    "test_data.drop(['Cabin', 'Ticket', 'Name'], axis=1, inplace=True)\n",
+    "\n"
    ]
   },
   {
@@ -50,7 +52,8 @@
    "outputs": [],
    "source": [
     "#Reset index to PassengerId\n",
-    "train_data.set_index('PassengerId', inplace=True)"
+    "train_data.set_index('PassengerId', inplace=True)\n",
+    "test_data.set_index('PassengerId', inplace=True)"
    ]
   },
   {
@@ -130,6 +133,16 @@
    "source": [
     "pd.to_pickle(X_train, '../data/X_train_v3.pkl')\n",
     "pd.to_pickle(y_train, '../data/y_train_v3.pkl')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_test = preprocess_pipeline.transform(test_data[num_attribs + cat_attribs])\n",
+    "pd.to_pickle(X_test, '../data/X_test_v3.pkl')\n"
    ]
   }
  ],
