--- a/notebooks/titanic_full.ipynb
+++ b/notebooks/titanic_full.ipynb
@@ -1164,25 +1164,154 @@
     "\n",
     "print(survived_counts_dict)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Perform Preprocessing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.preprocessing import OneHotEncoder\n",
+    "from sklearn.impute import SimpleImputer\n",
+    "from sklearn.compose import ColumnTransformer\n",
+    "import multiprocessing\n",
+    "\n",
+    "%matplotlib inline\n",
+    "\n",
+    "np.random.seed(42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_data = pd.read_csv('../data/train.csv')\n",
+    "test_data = pd.read_csv('../data/test.csv')\n",
+    "y_train = train_data['Survived']\n",
+    "train_data.drop(['Survived', 'Cabin', 'Ticket', 'Name'], axis=1, inplace=True)\n",
+    "test_data.drop(['Cabin', 'Ticket', 'Name'], axis=1, inplace=True)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Reset index to PassengerId\n",
+    "train_data.set_index('PassengerId', inplace=True)\n",
+    "test_data.set_index('PassengerId', inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Create list of attributes for preprocessing pipeline\n",
+    "num_attribs = ['Parch', 'Age', 'SibSp', 'Fare']\n",
+    "cat_attribs = ['Pclass', 'Embarked', 'Sex']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Create pipeline for preprocessing\n",
+    "num_pipeline = Pipeline([\n",
+    "    (\"imputer\", SimpleImputer(strategy=\"median\")),\n",
+    "    (\"std_scaler\", StandardScaler()),   \n",
+    "])\n",
+    "\n",
+    "cat_pipeline = Pipeline([\n",
+    "    (\"one_hot_encoder\", OneHotEncoder()),\n",
+    "    (\"imputer\", SimpleImputer(strategy=\"median\")),\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-0.47367361, -0.56573646,  0.43279337, ...,  0.        ,\n",
+       "         0.        ,  1.        ],\n",
+       "       [-0.47367361,  0.66386103,  0.43279337, ...,  0.        ,\n",
+       "         1.        ,  0.        ],\n",
+       "       [-0.47367361, -0.25833709, -0.4745452 , ...,  0.        ,\n",
+       "         1.        ,  0.        ],\n",
+       "       ...,\n",
+       "       [ 2.00893337, -0.1046374 ,  0.43279337, ...,  0.        ,\n",
+       "         1.        ,  0.        ],\n",
+       "       [-0.47367361, -0.25833709, -0.4745452 , ...,  0.        ,\n",
+       "         0.        ,  1.        ],\n",
+       "       [-0.47367361,  0.20276197, -0.4745452 , ...,  0.        ,\n",
+       "         0.        ,  1.        ]])"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "#Create preprocessing pipeline\n",
+    "preprocess_pipeline = ColumnTransformer([\n",
+    "    (\"num\", num_pipeline, num_attribs),\n",
+    "    (\"cat\", cat_pipeline, cat_attribs),\n",
+    "])\n",
+    "\n",
+    "X_train = preprocess_pipeline.fit_transform(train_data[num_attribs + cat_attribs])\n",
+    "\n",
+    "X_train"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pd.to_pickle(X_train, '../data/X_train_v3.pkl')\n",
+    "pd.to_pickle(y_train, '../data/y_train_v3.pkl')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_test = preprocess_pipeline.transform(test_data[num_attribs + cat_attribs])\n",
+    "pd.to_pickle(X_test, '../data/X_test_v3.pkl')\n"
+   ]
   }
  ],
  "metadata": {
-  "kernelspec": {
-   "display_name": "venv",
-   "language": "python",
-   "name": "python3"
-  },
   "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "name": "python"
   },
   "orig_nbformat": 4
  },
