--- a/notebooks/titanic_models_v3.ipynb
+++ b/notebooks/titanic_models_v3.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,6 +51,7 @@
     "from sklearn.model_selection import cross_validate\n",
     "from sklearn.model_selection import GridSearchCV\n",
     "from sklearn.model_selection import RandomizedSearchCV\n",
+    "from sklearn.model_selection import train_test_split\n",
     "\n",
     "#Import metrics\n",
     "from sklearn.metrics import accuracy_score\n",
@@ -71,12 +72,12 @@
     "from sklearn.neighbors import KNeighborsClassifier\n",
     "from sklearn.tree import DecisionTreeClassifier\n",
     "from xgboost import XGBClassifier\n",
-    "from multiprocessing import cpu_count"
+    "from multiprocessing import cpu_count\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,12 +87,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Create function to add model and metrics to dictionary\n",
-    "def model_eval(model, name, X_train, y_train, cv):\n",
+    "def model_eval(model, name, X_test, y_test, cv):\n",
     "    #Fit model\n",
     "    model.fit(X_train, y_train)\n",
     "    \n",
@@ -119,14 +120,13 @@
     "                    'f1': f1,\n",
     "                    'roc_auc': roc_auc,\n",
     "                    'cv_score': cv_scores.mean(),\n",
-    "                    'cv_pred': cv_pred\n",
     "                    }\n",
     "    \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -193,7 +193,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'model': RandomForestClassifier(), 'accuracy': 0.9797979797979798, 'precision': 0.990909090909091, 'recall': 0.956140350877193, 'f1': 0.9732142857142858, 'roc_auc': 0.9753379350014381, 'cv_score': 0.8081772784019975}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(models['RandomForestClassifier'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
@@ -203,7 +220,7 @@
        "       [ 15, 327]])"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 99,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -216,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
@@ -255,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
@@ -263,7 +280,77 @@
      "output_type": "stream",
      "text": [
       "RandomForestClassifier\n",
-      "cv_score:  0.8160049937578027\n",
+      "accuracy:  0.9797979797979798\n",
+      "LogisticRegression\n",
+      "accuracy:  0.8058361391694725\n",
+      "GradientBoostingClassifier\n",
+      "accuracy:  0.8911335578002245\n",
+      "SVC\n",
+      "accuracy:  0.8372615039281706\n",
+      "SGDClassifier\n",
+      "accuracy:  0.6464646464646465\n",
+      "KNeighborsClassifier\n",
+      "accuracy:  0.8574635241301908\n",
+      "DecisionTreeClassifier\n",
+      "accuracy:  0.9797979797979798\n",
+      "XGBClassifier\n",
+      "accuracy:  0.9640852974186308\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Print accuracy score for models\n",
+    "for model in models:\n",
+    "    print(model)\n",
+    "    print('accuracy: ', models[model]['accuracy'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RandomForestClassifier\n",
+      "f1:  0.9732142857142858\n",
+      "LogisticRegression\n",
+      "f1:  0.7350689127105667\n",
+      "GradientBoostingClassifier\n",
+      "f1:  0.8500772797527048\n",
+      "SVC\n",
+      "f1:  0.7744945567651633\n",
+      "SGDClassifier\n",
+      "f1:  0.6181818181818182\n",
+      "KNeighborsClassifier\n",
+      "f1:  0.8078668683812406\n",
+      "DecisionTreeClassifier\n",
+      "f1:  0.973134328358209\n",
+      "XGBClassifier\n",
+      "f1:  0.9523809523809523\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Print f1 score for models\n",
+    "for model in models:\n",
+    "    print(model)\n",
+    "    print('f1: ', models[model]['f1'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RandomForestClassifier\n",
+      "cv_score:  0.8081772784019975\n",
       "LogisticRegression\n",
       "cv_score:  0.8002372034956304\n",
       "GradientBoostingClassifier\n",
@@ -271,18 +358,18 @@
       "SVC\n",
       "cv_score:  0.8226966292134831\n",
       "SGDClassifier\n",
-      "cv_score:  0.7429588014981274\n",
+      "cv_score:  0.7665043695380774\n",
       "KNeighborsClassifier\n",
       "cv_score:  0.8069912609238452\n",
       "DecisionTreeClassifier\n",
-      "cv_score:  0.7923845193508114\n",
+      "cv_score:  0.7901498127340825\n",
       "XGBClassifier\n",
       "cv_score:  0.8125967540574284\n"
      ]
     }
    ],
    "source": [
-    "#Print model and cv_score\n",
+    "#Print cv_score for each model\n",
     "for model in models:\n",
     "    print(model)\n",
     "    print('cv_score: ', models[model]['cv_score'])\n",
@@ -291,79 +378,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Optimize RandomForestClassifier\n",
-    "# start = time.time()\n",
-    "# param_grid = [{'n_estimators': [3, 10, 30, 100, 300, 1000],\n",
-    "#                 'max_features': [2, 4, 6, 8, 10],\n",
-    "#                 'max_depth': [2, 4, 6, 8, 10],\n",
-    "#                 'max_leaf_nodes': [2, 4, 6, 8, 10, 20, 50],\n",
-    "#                 'n_jobs': [-1]}]\n",
+    "#Make predictions on test set\n",
+    "X_test = pd.read_pickle('../data/X_test_v3.pkl')\n",
     "\n",
-    "# rf_clf = RandomForestClassifier()\n",
-    "\n",
-    "# scoring = ['roc_auc', 'accuracy', 'precision', 'recall', 'f1']\n",
-    "\n",
-    "# grid_search = GridSearchCV(rf_clf, param_grid, cv=10, \n",
-    "#                            scoring=scoring,\n",
-    "#                            refit='roc_auc', \n",
-    "#                            n_jobs=cpu_count())\n",
-    "\n",
-    "# grid_search.fit(X_train, y_train)\n",
-    "\n",
-    "# best_params = grid_search.best_params_\n",
-    "\n",
-    "# stop = time.time()\n",
-    "# total_time = stop - start\n",
-    "\n",
-    "# print(best_params)\n",
-    "# print(total_time)\n"
+    "y_pred = rf_clf.predict(X_test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# best_params = best_params\n",
-    "# print(best_params)"
+    "test = pd.read_csv('../data/test.csv')\n",
+    "\n",
+    "#Create submission file\n",
+    "submission = pd.DataFrame({'PassengerId': test['PassengerId'], 'Survived': y_pred})\n",
+    "\n",
+    "submission.to_csv('../data/submission_3.csv', index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# #Fit model with best params\n",
-    "# rf_clf = RandomForestClassifier(**best_params)\n",
-    "\n",
-    "# #Fit the model\n",
-    "# rf_clf.fit(X_train, y_train)\n",
-    "\n",
-    "# #Make predictions\n",
-    "# y_pred = rf_clf.predict(X_train)\n",
-    "\n",
-    "# #Evalutate model\n",
-    "# accuracy = accuracy_score(y_train, y_pred)\n",
-    "# precision = precision_score(y_train, y_pred)\n",
-    "# recall = recall_score(y_train, y_pred)\n",
-    "# f1 = f1_score(y_train, y_pred)\n",
-    "# roc_auc = roc_auc_score(y_train, y_pred)\n",
-    "\n",
-    "# #Create dict of metrics\n",
-    "# metrics = {'accuracy': accuracy,\n",
-    "#             'precision': precision,\n",
-    "#             'recall': recall,\n",
-    "#             'f1': f1,\n",
-    "#             'roc_auc': roc_auc}\n",
-    "\n",
-    "# print(metrics)"
-   ]
+   "source": []
   }
  ],
  "metadata": {
